--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,16 @@ Flask-BabelEx==0.9.3
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
+Flask-Moment==0.6.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
+Markdown==2.6.11
 MarkupSafe==1.0
+Pygments==2.2.0
 PyJWT==1.6.4
 PyMySQL==0.8.1
 python-dateutil==2.7.3
