--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==0.9.9
 Babel==2.6.0
 blinker==1.4
+certifi==2018.8.13
+chardet==3.0.4
 click==6.7
 Flask==1.0.2
 Flask-Admin==1.5.1
@@ -12,6 +14,8 @@ Flask-Moment==0.6.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.9.0
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
@@ -23,8 +27,11 @@ PyMySQL==0.8.1
 python-dateutil==2.7.3
 python-editor==1.0.3
 pytz==2018.5
+qqwry-py3==1.0.8
+requests==2.19.1
 six==1.11.0
 speaklater==1.3
 SQLAlchemy==1.2.8
+urllib3==1.23
 Werkzeug==0.14.1
 WTForms==2.1
